// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScatterRow renders correctly 1`] = `
<div
  className="scatter-row "
>
  <div
    className="title"
  >
    <h2>
      potatoes
    </h2>
  </div>
  <div
    className="graph"
  />
</div>
`;

exports[`ScatterRow updates nicely 1`] = `
<div
  className="scatter-row "
>
  <div
    className="title"
  >
    <h2>
      baked
    </h2>
  </div>
  <div
    className="graph"
  />
</div>
`;
